@@ -223,6 +223,7 @@ typedef struct mod_gm_opt_struct {
     int            orphan_host_checks;                      /**< generate fake result for orphaned host checks */
     int            orphan_service_checks;                   /**< generate fake result for orphaned service checks */
     int            accept_clear_results;                    /**< accept unencrypted results */
+    int            latency_flatten_window;                  /**< postpone high latency checks */
 /* worker */
     char         * identifier;                              /**< identifier for this worker */
     char         * pidfile;                                 /**< path to a pidfile */
