@@ -34,6 +34,7 @@
 void *result_worker(void *);
 int set_worker( gearman_worker_st **worker );
 void *get_results( gearman_job_st *, void *, size_t *, gearman_return_t * );
+void reschedule_high_latency(check_result * chk_result);
 
 /**
  * @}
